光照除聚光灯基本完成

--- a/GL/GL.vcxproj
+++ b/GL/GL.vcxproj
@@ -119,6 +119,7 @@
   <ItemGroup>
     <ClCompile Include="GLAD\glad.c" />
     <ClCompile Include="GLTool\GLCamera\HGLCamera.cpp" />
+    <ClCompile Include="GLTool\GLModel\HGLMesh.cpp" />
     <ClCompile Include="GLTool\GLModel\HGLModel.cpp" />
     <ClCompile Include="GLTool\GLScenes\HGLScenes.cpp" />
     <ClCompile Include="GLTool\GLShader\HGLDynamicFragmentShader.cpp" />
@@ -138,8 +139,8 @@
     <ClInclude Include="GLTool\GLLight\HGLParallelLight.h" />
     <ClInclude Include="GLTool\GLLight\HGLPointLight.h" />
     <ClInclude Include="GLTool\GLLight\HGLSpotLight.h" />
+    <ClInclude Include="GLTool\GLModel\HGLMesh.h" />
     <ClInclude Include="GLTool\GLModel\HGLModel.h" />
-    <ClInclude Include="GLTool\GLReferenceCounter\HGLReferenceCounter.h" />
     <ClInclude Include="GLTool\GLScenes\HGLScenes.h" />
     <ClInclude Include="GLTool\GLShader\HGLDynamicFragmentShader.h" />
     <ClInclude Include="GLTool\GLShader\HGLShader.h" />
