--- a/GL/GL.vcxproj.filters
+++ b/GL/GL.vcxproj.filters
@@ -9,120 +9,120 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="GLAD">
-      <UniqueIdentifier>{cf09223d-54b1-4874-a666-0fb27609df2d}</UniqueIdentifier>
+    <Filter Include="HGLTool">
+      <UniqueIdentifier>{16986be6-f33a-49b2-ab6f-a7534c55c405}</UniqueIdentifier>
     </Filter>
-    <Filter Include="GLTool">
-      <UniqueIdentifier>{6aa1300b-bd6a-4bff-9b8a-46363592caf2}</UniqueIdentifier>
+    <Filter Include="HGLTool\HGLCamera">
+      <UniqueIdentifier>{1f3bdee1-ba43-4cf7-97a5-cf5f8ec8a0ef}</UniqueIdentifier>
     </Filter>
-    <Filter Include="GLTool\GLShader">
-      <UniqueIdentifier>{d691e0dd-6f8d-4781-8576-7164342c324c}</UniqueIdentifier>
+    <Filter Include="HGLTool\HGLLight">
+      <UniqueIdentifier>{fce8e83a-9715-41b9-851a-496fa8a43a10}</UniqueIdentifier>
     </Filter>
-    <Filter Include="GLTool\GLTexture2D">
-      <UniqueIdentifier>{157da8bd-582d-49c8-92c4-297005d55e7d}</UniqueIdentifier>
+    <Filter Include="HGLTool\HGLModel">
+      <UniqueIdentifier>{be7f7c3f-1766-4884-95d3-d7b7c5ac5929}</UniqueIdentifier>
     </Filter>
-    <Filter Include="GLTool\GLCamera">
-      <UniqueIdentifier>{21505800-d2ca-4e64-b94f-f3ad88bdb1ed}</UniqueIdentifier>
+    <Filter Include="HGLTool\HGLScenes">
+      <UniqueIdentifier>{bcc36fcc-7412-4edf-a122-144e9aaa1a0c}</UniqueIdentifier>
     </Filter>
-    <Filter Include="GLTool\GLModel">
-      <UniqueIdentifier>{1fb2bc15-537d-43c4-9c25-f31500e96a72}</UniqueIdentifier>
+    <Filter Include="HGLTool\HGLShader">
+      <UniqueIdentifier>{6ebb4988-9d45-4ead-8739-3e1ea11f8474}</UniqueIdentifier>
     </Filter>
-    <Filter Include="GLTool\GLLight">
-      <UniqueIdentifier>{89d2f7fb-8890-46ee-bc33-7c91a6d0c268}</UniqueIdentifier>
+    <Filter Include="HGLTool\HGLTexture2D">
+      <UniqueIdentifier>{17ec37ba-b642-4536-b9dd-014f6f102af8}</UniqueIdentifier>
     </Filter>
-    <Filter Include="GLTool\GLScenes">
-      <UniqueIdentifier>{a13c6d4c-ae19-4cef-8a77-6708924a10c0}</UniqueIdentifier>
+    <Filter Include="lib">
+      <UniqueIdentifier>{18507da2-6b71-4e5e-b922-ddf5140bbee9}</UniqueIdentifier>
     </Filter>
-    <Filter Include="GLTool\ShaderSource">
-      <UniqueIdentifier>{a5d4f227-3c45-4ddb-8e4e-8fed8574cebb}</UniqueIdentifier>
+    <Filter Include="lib\GLAD">
+      <UniqueIdentifier>{037406e9-2b71-4d58-b534-eb3e886292ae}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="lib\stb_image">
+      <UniqueIdentifier>{8ded9374-cc1f-48cd-aac6-078f1770f5ba}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="GLAD\glad.c">
-      <Filter>GLAD</Filter>
-    </ClCompile>
-    <ClCompile Include="stb_image.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="GLTool\GLTexture2D\HGLTexture2D.cpp">
-      <Filter>GLTool\GLTexture2D</Filter>
-    </ClCompile>
-    <ClCompile Include="GLTool\GLCamera\HGLCamera.cpp">
-      <Filter>GLTool\GLCamera</Filter>
-    </ClCompile>
-    <ClCompile Include="GLTool\GLModel\HGLModel.cpp">
-      <Filter>GLTool\GLModel</Filter>
-    </ClCompile>
-    <ClCompile Include="GLTool\GLShader\HGLShaderProgram.cpp">
-      <Filter>GLTool\GLShader</Filter>
-    </ClCompile>
     <ClCompile Include="main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="GLTool\GLScenes\HGLScenes.cpp">
-      <Filter>GLTool\GLScenes</Filter>
+    <ClCompile Include="HGLTool\HGLCamera\HGLCamera.cpp">
+      <Filter>HGLTool\HGLCamera</Filter>
     </ClCompile>
-    <ClCompile Include="GLTool\GLShader\HGLDynamicFragmentShader.cpp">
-      <Filter>GLTool\GLShader</Filter>
+    <ClCompile Include="HGLTool\HGLModel\HGLMesh.cpp">
+      <Filter>HGLTool\HGLModel</Filter>
     </ClCompile>
-    <ClCompile Include="GLTool\GLModel\HGLMesh.cpp">
-      <Filter>GLTool\GLModel</Filter>
+    <ClCompile Include="HGLTool\HGLModel\HGLModel.cpp">
+      <Filter>HGLTool\HGLModel</Filter>
+    </ClCompile>
+    <ClCompile Include="HGLTool\HGLScenes\HGLScenes.cpp">
+      <Filter>HGLTool\HGLScenes</Filter>
+    </ClCompile>
+    <ClCompile Include="HGLTool\HGLShader\HGLDynamicFragmentShader.cpp">
+      <Filter>HGLTool\HGLShader</Filter>
+    </ClCompile>
+    <ClCompile Include="HGLTool\HGLShader\HGLShaderProgram.cpp">
+      <Filter>HGLTool\HGLShader</Filter>
+    </ClCompile>
+    <ClCompile Include="HGLTool\HGLTexture2D\HGLTexture2D.cpp">
+      <Filter>HGLTool\HGLTexture2D</Filter>
+    </ClCompile>
+    <ClCompile Include="lib\stb_image\stb_image.cpp">
+      <Filter>lib\stb_image</Filter>
+    </ClCompile>
+    <ClCompile Include="lib\glad\glad.c">
+      <Filter>lib\GLAD</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="GLAD\glad.h">
-      <Filter>GLAD</Filter>
+    <ClInclude Include="HGLTool\HGLCamera\HGLCamera.h">
+      <Filter>HGLTool\HGLCamera</Filter>
     </ClInclude>
-    <ClInclude Include="GLAD\khrplatform.h">
-      <Filter>GLAD</Filter>
+    <ClInclude Include="HGLTool\HGLLight\HGLAmbientLight.h">
+      <Filter>HGLTool\HGLLight</Filter>
     </ClInclude>
-    <ClInclude Include="GLTool\GLShader\HGLShader.h">
-      <Filter>GLTool\GLShader</Filter>
+    <ClInclude Include="HGLTool\HGLLight\HGLCameraParallelLight.h">
+      <Filter>HGLTool\HGLLight</Filter>
     </ClInclude>
-    <ClInclude Include="GLTool\GLTexture2D\HGLTexture2D.h">
-      <Filter>GLTool\GLTexture2D</Filter>
+    <ClInclude Include="HGLTool\HGLLight\HGLLight.h">
+      <Filter>HGLTool\HGLLight</Filter>
     </ClInclude>
-    <ClInclude Include="GLTool\GLCamera\HGLCamera.h">
-      <Filter>GLTool\GLCamera</Filter>
+    <ClInclude Include="HGLTool\HGLLight\HGLParallelLight.h">
+      <Filter>HGLTool\HGLLight</Filter>
     </ClInclude>
-    <ClInclude Include="GLTool\GLModel\HGLModel.h">
-      <Filter>GLTool\GLModel</Filter>
+    <ClInclude Include="HGLTool\HGLLight\HGLPointLight.h">
+      <Filter>HGLTool\HGLLight</Filter>
     </ClInclude>
-    <ClInclude Include="GLTool\GLShader\HGLShaderProgram.h">
-      <Filter>GLTool\GLShader</Filter>
+    <ClInclude Include="HGLTool\HGLLight\HGLSpotLight.h">
+      <Filter>HGLTool\HGLLight</Filter>
     </ClInclude>
-    <ClInclude Include="GLTool\GLLight\HGLLight.h">
-      <Filter>GLTool\GLLight</Filter>
+    <ClInclude Include="HGLTool\HGLModel\HGLMesh.h">
+      <Filter>HGLTool\HGLModel</Filter>
     </ClInclude>
-    <ClInclude Include="GLTool\GLLight\HGLPointLight.h">
-      <Filter>GLTool\GLLight</Filter>
+    <ClInclude Include="HGLTool\HGLModel\HGLModel.h">
+      <Filter>HGLTool\HGLModel</Filter>
     </ClInclude>
-    <ClInclude Include="GLTool\GLLight\HGLParallelLight.h">
-      <Filter>GLTool\GLLight</Filter>
+    <ClInclude Include="HGLTool\HGLScenes\HGLScenes.h">
+      <Filter>HGLTool\HGLScenes</Filter>
     </ClInclude>
-    <ClInclude Include="GLTool\GLLight\HGLSpotLight.h">
-      <Filter>GLTool\GLLight</Filter>
+    <ClInclude Include="HGLTool\HGLShader\HGLDynamicFragmentShader.h">
+      <Filter>HGLTool\HGLShader</Filter>
     </ClInclude>
-    <ClInclude Include="GLTool\GLScenes\HGLScenes.h">
-      <Filter>GLTool\GLScenes</Filter>
+    <ClInclude Include="HGLTool\HGLShader\HGLShader.h">
+      <Filter>HGLTool\HGLShader</Filter>
     </ClInclude>
-    <ClInclude Include="GLTool\GLLight\HGLAmbientLight.h">
-      <Filter>GLTool\GLLight</Filter>
+    <ClInclude Include="HGLTool\HGLShader\HGLShaderProgram.h">
+      <Filter>HGLTool\HGLShader</Filter>
     </ClInclude>
-    <ClInclude Include="GLTool\GLShader\HGLDynamicFragmentShader.h">
-      <Filter>GLTool\GLShader</Filter>
+    <ClInclude Include="HGLTool\HGLTexture2D\HGLTexture2D.h">
+      <Filter>HGLTool\HGLTexture2D</Filter>
     </ClInclude>
-    <ClInclude Include="GLTool\GLModel\HGLMesh.h">
-      <Filter>GLTool\GLModel</Filter>
+    <ClInclude Include="lib\glad\glad.h">
+      <Filter>lib\GLAD</Filter>
     </ClInclude>
-    <ClInclude Include="GLTool\GLLight\HGLCameraParallelLight.h">
-      <Filter>GLTool\GLLight</Filter>
+    <ClInclude Include="lib\glad\khrplatform.h">
+      <Filter>lib\GLAD</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="GLTool\ShaderSource\LightTest.ss">
-      <Filter>GLTool\ShaderSource</Filter>
-    </None>
     <None Include="shader.vs">
       <Filter>源文件</Filter>
     </None>
